--- a/equipamentos.html
+++ b/equipamentos.html
@@ -108,7 +108,7 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Equipamentos</h1>
-                <a href="clientes_cadastro.html" class="btn btn-success">Cadastro</a>
+                <a href="equipamentos_cadastro.html" class="btn btn-success">Cadastro</a>
             </div>
 
             <table class="table table-striped">
@@ -116,38 +116,38 @@
                     <tr>
                         <th>#</th>
                         <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Email</th>
+                        <th>Marca</th>
+                        <th>Condição</th>
                         <th>Açoes</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Desfribilador</td>
+                        <td>Philips</td>
+                        <td>Ótimo</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Bisturi</td>
+                        <td>Medlight</td>
+                        <td>Médio</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Estetoscópio</td>
+                        <td>Bayer</td>
+                        <td>Regular</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Monitor Cardiáco</td>
+                        <td>Bayer</td>
+                        <td>Ótimo</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                 </tbody>
