--- a/clientes_cadastro.html
+++ b/clientes_cadastro.html
@@ -19,10 +19,10 @@
 <body>
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html"><i>eHealth</i><img src="./imagens/Saude.png" alt="Smiley face" height="32" width="32""></a>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
+    <input class="form-control form-control-dark w-100" type="text" placeholder="Pesquisar" aria-label="Pesquisar">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Sign out</a>
+            <a class="nav-link" href="#">Sair</a>
         </li>
     </ul>
 </nav>
@@ -45,27 +45,27 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="equipamentos.html">
                             <span data-feather="shopping-cart"></span>
-                            Produtos
+                            Equipamentos
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="locacao.html">
                             <span data-feather="users"></span>
-                            Vendas
+                            Locação
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="Relatórios">
                             <span data-feather="bar-chart-2"></span>
-                            Reports
+                            Relatórios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="sobre.html">
                             <span data-feather="layers"></span>
-                            Integrations
+                            Sobre
                         </a>
                     </li>
                 </ul>
@@ -111,53 +111,86 @@
 
             </div>
 
+            <div>
 
-            <form>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="inputEmail4">Email</label>
-                  <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                <form>
+                  <div class="form-row">
+                    <div class="form-group col-md-8">
+                      <label for="inputEmail4">Cliente</label>
+                      <input type="email" class="form-control" id="idcliente" placeholder="Nome">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputPassword4">CPF/CNPJ</label>
+                      <input type="text" class="form-control" id="idcpfcnpj" placeholder="CPF/CNPJ">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                      <div class="form-group col-md-7">
+                        <label for="inputAddress">Endereço</label>
+                        <input type="text" class="form-control" id="idrua" placeholder="Rua">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <label for="inputAddress">Número</label>
+                        <input type="text" class="form-control" id="idnumero" placeholder="Número">
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="inputAddress">Bairro</label>
+                        <input type="text" class="form-control" id="idbairro" placeholder="Bairro">
+                      </div>      
+                  </div>            
+                  <div class="form-group">
+                    <label for="inputAddress2">Complemento</label>
+                    <input type="text" class="form-control" id="idcomplemento" placeholder="Apartamento, praça, distrito...">
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputCity">Cidade</label>
+                      <input type="text" class="form-control" id="idcidade">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputState">Estado</label>
+                      <select id="idestado" class="form-control">
+                        <option selected>Selecionar...</option>
+                        <option>Minas Gerais</option>
+                        <option>São Paulo</option>
+                        <option>Rio de Janeiro</option>
+                        <option>Outros</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                      <label for="inputZip">CEP</label>
+                      <input type="text" class="form-control" id="idcep">
+                    </div>
+                  </div>
+                <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputAddress">E-mail</label>
+                        <input type="text" class="form-control" id="idemail" placeholder="E-mail">
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="inputCity">Telefone</label>
+                        <input type="text" class="form-control" id="idtelefone">
+                      </div>   
+                      <div class="form-group col-md-3">
+                        <label for="inputCity">Celular</label>
+                        <input type="text" class="form-control" id="idcelular">
+                      </div>                                         
                 </div>
-                <div class="form-group col-md-6">
-                  <label for="inputPassword4">Password</label>
-                  <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+
                 </div>
-              </div>
-              <div class="form-group">
-                <label for="inputAddress">Address</label>
-                <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-              </div>
-              <div class="form-group">
-                <label for="inputAddress2">Address 2</label>
-                <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-              </div>
-              <div class="form-row">
-                <div class="form-group col-md-6">
-                  <label for="inputCity">City</label>
-                  <input type="text" class="form-control" id="inputCity">
-                </div>
-                <div class="form-group col-md-4">
-                  <label for="inputState">State</label>
-                  <select id="inputState" class="form-control">
-                    <option selected>Choose...</option>
-                    <option>...</option>
-                  </select>
-                </div>
-                <div class="form-group col-md-2">
-                  <label for="inputZip">Zip</label>
-                  <input type="text" class="form-control" id="inputZip">
-                </div>
-              </div>
-              <div class="form-group">
-                <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="gridCheck">
-                  <label class="form-check-label" for="gridCheck">
-                    Check me out
-                  </label>
-                </div>
-              </div>
-              <button type="submit" class="btn btn-primary">Sign in</button>
-            </form>
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="check">
+                      <label class="form-check-label" for="gridCheck">
+                        Deseja receber notificações.
+                      </label>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Cadastrar</button>
+                </form>  
+
+            </div>
+
 
 
         </main>
