--- a/equipamentos_cadastro.html
+++ b/equipamentos_cadastro.html
@@ -18,7 +18,7 @@
 
 <body>
 <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#"><i>eHealth</i><img src="./imagens/Saude.png" alt="Smiley face" height="32" width="32""></a>
+    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="index.html"><i>eHealth</i><img src="./imagens/Saude.png" alt="Smiley face" height="32" width="32""></a>
     <input class="form-control form-control-dark w-100" type="text" placeholder="Pesquisar" aria-label="Pesquisar">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
@@ -57,13 +57,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="relatorios.html">
+                        <a class="nav-link" href="Relatórios">
                             <span data-feather="bar-chart-2"></span>
                             Relatórios
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="sobre.html">
                             <span data-feather="layers"></span>
                             Sobre
                         </a>
@@ -107,51 +107,90 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Clientes</h1>
-                <a href="clientes_cadastro.html" class="btn btn-success">Cadastro</a>
+                <h1 class="h2">Cadastro de Equipamentos</h1>
+
             </div>
 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Email</th>
-                        <th>Açoes</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Aberta Demais De Oliveira</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Colapso Cardíaco da Silva</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Inocêncio Coitadinho</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Juvenalda Datia Gulosa</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                </tbody>
-            </table>
+            <div>
+
+                <form>
+                  <div class="form-row">
+                    <div class="form-group col-md-8">
+                      <label for="inputEmail4">Cliente</label>
+                      <input type="email" class="form-control" id="idcliente" placeholder="Nome">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputPassword4">CPF/CNPJ</label>
+                      <input type="text" class="form-control" id="idcpfcnpj" placeholder="CPF/CNPJ">
+                    </div>
+                  </div>
+                  <div class="form-row">
+                      <div class="form-group col-md-7">
+                        <label for="inputAddress">Endereço</label>
+                        <input type="text" class="form-control" id="idrua" placeholder="Rua">
+                      </div>
+                      <div class="form-group col-md-2">
+                        <label for="inputAddress">Número</label>
+                        <input type="text" class="form-control" id="idnumero" placeholder="Número">
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="inputAddress">Bairro</label>
+                        <input type="text" class="form-control" id="idbairro" placeholder="Bairro">
+                      </div>      
+                  </div>            
+                  <div class="form-group">
+                    <label for="inputAddress2">Complemento</label>
+                    <input type="text" class="form-control" id="idcomplemento" placeholder="Apartamento, praça, distrito...">
+                  </div>
+                  <div class="form-row">
+                    <div class="form-group col-md-6">
+                      <label for="inputCity">Cidade</label>
+                      <input type="text" class="form-control" id="idcidade">
+                    </div>
+                    <div class="form-group col-md-4">
+                      <label for="inputState">Estado</label>
+                      <select id="idestado" class="form-control">
+                        <option selected>Selecionar...</option>
+                        <option>Minas Gerais</option>
+                        <option>São Paulo</option>
+                        <option>Rio de Janeiro</option>
+                        <option>Outros</option>
+                      </select>
+                    </div>
+                    <div class="form-group col-md-2">
+                      <label for="inputZip">CEP</label>
+                      <input type="text" class="form-control" id="idcep">
+                    </div>
+                  </div>
+                <div class="form-row">
+                      <div class="form-group col-md-6">
+                        <label for="inputAddress">E-mail</label>
+                        <input type="text" class="form-control" id="idemail" placeholder="E-mail">
+                      </div>
+                      <div class="form-group col-md-3">
+                        <label for="inputCity">Telefone</label>
+                        <input type="text" class="form-control" id="idtelefone">
+                      </div>   
+                      <div class="form-group col-md-3">
+                        <label for="inputCity">Celular</label>
+                        <input type="text" class="form-control" id="idcelular">
+                      </div>                                         
+                </div>
+
+                </div>
+                  <div class="form-group">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" id="check">
+                      <label class="form-check-label" for="gridCheck">
+                        Deseja receber notificações.
+                      </label>
+                    </div>
+                  </div>
+                  <button type="submit" class="btn btn-primary">Cadastrar</button>
+                </form>  
+
+            </div>
+
 
 
         </main>
