--- a/locacao.html
+++ b/locacao.html
@@ -108,46 +108,51 @@
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
                 <h1 class="h2">Locação de Equipamentos</h1>
-                <a href="clientes_cadastro.html" class="btn btn-success">Cadastro</a>
+                <a href="locacao_cadastro.html" class="btn btn-success">Cadastro</a>
             </div>
 
             <table class="table table-striped">
                 <thead>
                     <tr>
                         <th>#</th>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Email</th>
-                        <th>Açoes</th>
+                        <th>Equipamento</th>
+                        <th>Cliente</th>
+                        <th>Dt. Locação</th>
+                        <th>Dt. Devolução Prevista</th>
+                        <th>Ações</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Desfribilador</td>
+                        <td>Aberta Demais De Oliveira</td>
+                        <td>01/10/2018</td>
+                        <td>10/09/2018</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>2</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Bisturi</td>
+                        <td>Colapso Cardíaco da Silva</td>
+                        <td>01/11/2017</td>
+                        <td>10/09/2018</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>3</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Estetoscópio</td>
+                        <td>Inocêncio Coitadinho</td>
+                        <td>01/12/2017</td>
+                        <td>10/09/2018</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                     <tr>
                         <td>4</td>
-                        <td>Matheus</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
+                        <td>Monitor Cardiáco</td>
+                        <td>Juvenalda Datia Gulosa</td>
+                        <td>01/01/2018</td>
+                        <td>10/09/2018</td>
                         <td>Alterar / Deletar</td>
                     </tr>
                 </tbody>
