--- a/equipamentos_cadastro.html
+++ b/equipamentos_cadastro.html
@@ -57,7 +57,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Relatórios">
+                        <a class="nav-link" href="Relatorios.html">
                             <span data-feather="bar-chart-2"></span>
                             Relatórios
                         </a>
