--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="produtos.html">
+                        <a class="nav-link" href="equipamentos.html">
                             <span data-feather="shopping-cart"></span>
                             Equipamentos
                         </a>
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="sobre.html">
                             <span data-feather="layers"></span>
                             Sobre
                         </a>
