--- a/sobre.html
+++ b/sobre.html
@@ -63,7 +63,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="sobre.html">
                             <span data-feather="layers"></span>
                             Sobre
                         </a>
@@ -107,51 +107,10 @@
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">Clientes</h1>
-                <a href="clientes_cadastro.html" class="btn btn-success">Cadastro</a>
+                <h1 class="h2">Sobre</h1>
             </div>
 
-            <table class="table table-striped">
-                <thead>
-                    <tr>
-                        <th>#</th>
-                        <th>Nome</th>
-                        <th>CPF</th>
-                        <th>Email</th>
-                        <th>Açoes</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>1</td>
-                        <td>Aberta Demais De Oliveira</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Colapso Cardíaco da Silva</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Inocêncio Coitadinho</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Juvenalda Datia Gulosa</td>
-                        <td>99999999</td>
-                        <td>teste@testes.com.br</td>
-                        <td>Alterar / Deletar</td>
-                    </tr>
-                </tbody>
-            </table>
+  
 
 
         </main>
