--- a/equipamentos_cadastro.html
+++ b/equipamentos_cadastro.html
@@ -22,7 +22,7 @@
     <input class="form-control form-control-dark w-100" type="text" placeholder="Pesquisar" aria-label="Pesquisar">
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Sair</a>
+            <a class="nav-link" href="login.html">Sair</a>
         </li>
     </ul>
 </nav>
